--- a/moringa-school-projects/Akan-Birthdays/index.css
+++ b/moringa-school-projects/Akan-Birthdays/index.css
@@ -7,8 +7,14 @@ h1{
   text-align: center;
   font-size: 25px;
   color;black;
+  padding-left: 50px;
 }
 .project>li{
   font-size: 20px;
   text-decoration: none;
+  }
+
+  nav{
+    text-align: center;
+    padding-left: 100px;
   }
