--- a/moringa-school-projects/Akan-Birthdays/index.css
+++ b/moringa-school-projects/Akan-Birthdays/index.css
@@ -1,14 +1,14 @@
 body{
-  background-size: contain;
+  background-size: auto;
   background-attachment: fixed;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
 }
 h1{
   text-align: center;
-  font-size: 25px;
-  color;black;
-  padding-left: 50px;
+  font-size: 30px;
+  color;fafafa;
 }
+
 .project>li{
   font-size: 20px;
   text-decoration: none;
@@ -16,5 +16,8 @@ h1{
 
   nav{
     text-align: center;
-    padding-left: 100px;
+
   }
+form{
+  padding-left: 50px;
+}
